--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </ul>
         <div id="message"></div>
         <footer>
-            <p>Created by Bing</p>
+            <p>Created by Daryjoe</p>
         </footer>
     </div>
     <script src="script.js"></script>
