--- a/index.html
+++ b/index.html
@@ -10,16 +10,20 @@
 </head>
 <body>
     <div class="container">
-        <h1>Daily Task Page for Oluwadara</h1>
-        <form id="task-form">
-            <input type="text" id="task-input" placeholder="Enter a new task...">
-            <input type="number" id="time-input" placeholder="Enter time limit in minutes...">
-            <button id="add-btn"><i class="fas fa-plus"></i></button>
-        </form>
-        <ul id="task-list">
-            <!-- Tasks will be added here -->
-        </ul>
-        <div id="message"></div>
+        <header>
+            <h1>Daily Task Page for Oluwadara</h1>
+        </header>
+        <main>
+            <form id="task-form">
+                <input type="text" id="task-input" placeholder="Enter a new task...">
+                <input type="number" id="time-input" placeholder="Enter time limit in minutes...">
+                <button id="add-btn"><i class="fas fa-plus"></i> Add Task</button>
+            </form>
+            <ul id="task-list">
+                <!-- Tasks will be added here -->
+            </ul>
+            <div id="message"></div>
+        </main>
         <footer>
             <p>Created by Daryjoe</p>
         </footer>
